--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -88,7 +88,25 @@
             color: #d32f2f;
         }
     </style>
+
+<style>
+    /* ... (keep your existing styles) ... */
+    .signup-link {
+        text-align: center;
+        margin-top: 20px;
+    }
+    .signup-link a {
+        color: #4CAF50;
+        text-decoration: none;
+    }
+    .signup-link a:hover {
+        text-decoration: underline;
+    }
+</style>
+
+
 </head>
+
 <body>
     <div class="container">
         <h2>Log In</h2>
@@ -119,6 +137,9 @@
             {% endfor %}
             <button type="submit">Log In</button>
         </form>
+        <div class="signup-link">
+            <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
+        </div>
     </div>
 </body>
 </html>
